--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,12 +32,16 @@ hived:
     - mkdir -p "$CI_JOB_NAME"/build
     - cd "$CI_JOB_NAME"/build
     - cmake -DCMAKE_BUILD_TYPE=Release -DCLEAR_VOTES=ON -DENABLE_MIRA=OFF -DBUILD_HIVE_TESTNET=OFF -DHIVE_LINT=ON ../..
-    - make hived -j10
+    - make hived truncate_block_log -j10
     # check if sql_serializer compiles with hived
     - test -f hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a
     # check if sql_serializer plugin is included in hived plugins
     - cd ./hive/programs/hived
     - ./hived --help | grep psql-url
+  artifacts:
+    paths:
+    - "$CI_JOB_NAME"
+    expire_in: 6 hours
   tags:
     - public-runner-docker
 
@@ -97,3 +101,42 @@ haf_system:
     expire_in: 1 week
   tags:
     - public-runner-docker
+
+replay_node_with_haf:
+  stage: build_and_test
+  needs:
+    - job: hive_fork_manager
+      artifacts: true
+    - job: hived
+      artifacts: true
+  image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
+  variables:
+    PYTHONPATH: "$CI_PROJECT_DIR/hive/tests/test_tools/package"
+    HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
+    BLOCK_LOG_PATH: "/blockchain/block_log"
+  script:
+    - apt-get install tox -y
+    - /etc/init.d/postgresql start
+    - cd $CI_PROJECT_DIR/hive_fork_manager/build
+    - make install
+    - psql -d postgres -c 'CREATE DATABASE haf_block_log'
+    - psql -d haf_block_log -c 'CREATE EXTENSION hive_fork_manager'
+    # tests
+    - cd $CI_PROJECT_DIR/tests/integration/replay
+    - mkdir blockchain
+    - $HIVE_BUILD_ROOT_PATH/programs/util/truncate_block_log $BLOCK_LOG_PATH blockchain/block_log 5000000
+    - $HIVE_BUILD_ROOT_PATH/programs/hived/hived --data-dir . --config config.ini --force-replay --exit-before-sync > node_logs.log 2>&1
+    - tox
+  artifacts:
+    paths:
+    - "**/node_logs.log"
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/integration/replay/report.xml
+    when: always
+    expire_in: 1 week
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
