Basic postgrest config.

--- a/postgres_config.conf
+++ b/postgres_config.conf
@@ -1,11 +1,13 @@
-  db-uri = "postgres://user:pass@localhost:5432/dbname"
+  db-uri = "postgresql://dev:devdevdev@192.168.6.254:5432/hafah_pczempiel "
   db-schema = "public" # this schema gets added to the search_path of every request
-  db-anon-role = "postgres"
-  db-pool = 10
-  db-pool-timeout = 10
+  db-anon-role = "dev_read" # only select without login (switch from dev)
+  db-pool = 10 # Number of connections to keep open in PostgREST’s database pool.
+
+  db-pool-timeout = 10 # Time to live, in seconds, for an idle database pool connection. If the timeout is reached 
+                       # the connection will be closed. Once a new request arrives a new connection will be started.
   
-  server-host = "!4"
-  server-port = 3000
+  server-host = "!4" # any IPv4 hostname
+  server-port = 8095
   
   ## unix socket location
   ## if specified it takes precedence over server-port
