Tested basic usage of POSTGREST.

--- a/postgres_config.conf
+++ b/postgres_config.conf
@@ -1,13 +1,16 @@
-  db-uri = "postgresql://dev:devdevdev@192.168.6.254:5432/hafah_pczempiel "
-  db-schema = "public" # this schema gets added to the search_path of every request
-  db-anon-role = "dev_read" # only select without login (switch from dev)
+  # example curl http://192.168.6.254:3000/fork?id=eq.1
+  # response [{"id":1,"block_num":1,"time_of_fork":"2016-03-24T16:05:00"}]
+  
+  db-uri = "postgresql://dev:devdevdev@localhost:5432/hafah_pczempiel" # your URI
+  db-schema = "hive" # this schema gets added to the search_path of every request
+  db-anon-role = "reader" # only select without login (switch from dev)
   db-pool = 10 # Number of connections to keep open in PostgREST’s database pool.
 
   db-pool-timeout = 10 # Time to live, in seconds, for an idle database pool connection. If the timeout is reached 
                        # the connection will be closed. Once a new request arrives a new connection will be started.
   
-  server-host = "!4" # any IPv4 hostname
-  server-port = 8095
+  #server-host = "!4" # any IPv4 hostname
+  #server-port = 8095
   
   ## unix socket location
   ## if specified it takes precedence over server-port
