- Defined hive.block_day_stats_view and hive.block_day_stats_all_ops_view providing a blockchain statistics on per-day basis. We could think about changing them to materialize views and implement periodical referesh for better performance - hive_fork_manager depends on tablefunc postgres extension.

--- a/src/hive_fork_manager/CMakeLists.txt
+++ b/src/hive_fork_manager/CMakeLists.txt
@@ -17,6 +17,8 @@ ADD_PSQL_EXTENSION(
             reversible_blocks.sql
             block_views_for_head_block.sql
             blocks_views_for_contexts.sql
+            block_day_stats_view.sql
+            block_day_stats_all_op_view.sql
             state_provider.sql
             state_providers/accounts.sql
             hived_connections.sql
