--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,17 @@ stages:
 variables:
   GIT_DEPTH: "1"
   GIT_SUBMODULE_STRATEGY: "recursive"
-  BUILDER_IMAGE_TAG: "@sha256:c299b6f2d0928adbf02bd40158cd8acd0b32187686b97e88303182ba82d12647"
+  # uses registry.gitlab.syncad.com/hive/haf/ci-base-image:ubuntu20.04-3
+  BUILDER_IMAGE_TAG: "@sha256:a701abca3cdd31bc3a5c7e58a8a2a9ea752e7f30e100aa41bcfe9c56b777883f"
+  SETUP_SCRIPTS_PATH: "$CI_PROJECT_DIR/haf/scripts"
 
 hive_fork_manager:
   stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
+  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
   script:
-    - /etc/init.d/postgresql start
-    - mkdir -p "$CI_JOB_NAME"/build
-    - cd "$CI_JOB_NAME"/build
-    - cmake -DCMAKE_BUILD_TYPE=Release -DHIVE_LINT=ON ../../haf
-    - make extension.hive_fork_manager -j10
-    - make install
-    - ctest --output-on-failure  -R test.functional.hive_fork_manager.*
+    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" extension.hive_fork_manager
+    - sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build"
+    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build" && ctest --output-on-failure  -R test.functional.hive_fork_manager.*
   artifacts:
     paths:
     - "$CI_JOB_NAME"
@@ -24,19 +22,16 @@ hive_fork_manager:
   tags:
     - public-runner-docker
 
+# job resonsible for hived build in mainnet config.
 hived:
   stage: build_and_test
-  image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
+  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
   script:
-    - /etc/init.d/postgresql start
-    - mkdir -p "$CI_JOB_NAME"/build
-    - cd "$CI_JOB_NAME"/build
-    - cmake -DCMAKE_BUILD_TYPE=Release -DCLEAR_VOTES=ON -DENABLE_MIRA=OFF -DBUILD_HIVE_TESTNET=OFF -DHIVE_LINT=ON ../../haf
-    - make hived truncate_block_log -j10
+    - $SETUP_SCRIPTS_PATH/build.sh --cmake-arg="-DHIVE_LINT=ON" --haf-source-dir="$CI_PROJECT_DIR/haf" --haf-binaries-dir="$CI_PROJECT_DIR/$CI_JOB_NAME/build" hived truncate_block_log
     # check if sql_serializer compiles with hived
-    - test -f hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a
+    - test -f "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/libraries/plugins/sql_serializer/libsql_serializer_plugin.a"
     # check if sql_serializer plugin is included in hived plugins
-    - cd ./hive/programs/hived
+    - cd "$CI_PROJECT_DIR/$CI_JOB_NAME/build/hive/programs/hived"
     - ./hived --help | grep psql-url
   artifacts:
     paths:
@@ -52,23 +47,18 @@ patterns_tests:
       artifacts: true
     - job: hived
       artifacts: true
-  image: "$CI_REGISTRY_IMAGE/builder$BUILDER_IMAGE_TAG"
+  image: "$CI_REGISTRY_IMAGE/ci-base-image$BUILDER_IMAGE_TAG"
   variables:
     HIVE_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hived/build/hive"
-    EXTENSION_BUILD_ROOT_PATH: "$CI_PROJECT_DIR/hive_fork_manager/build"
     BLOCK_LOG_PATH: "/blockchain/block_log"
   script:
-    - apt-get install tox -y
     - pip3 install -r requirements.txt
 
-    # install extension build in previous stage
+    # install hive_fork_manager extension built in previous stage
     # replay and prepare database
     - if [ ! "$POSTGRESQL_URI" ] && [ ! "$AH_ENDPOINT" ]; then
-        /etc/init.d/postgresql start ;
-        cd $EXTENSION_BUILD_ROOT_PATH ;
-        make install ;
-        psql -d postgres -c 'CREATE DATABASE haf_block_log' ;
-        psql -d haf_block_log -c 'CREATE EXTENSION hive_fork_manager CASCADE' ;
+        sudo $SETUP_SCRIPTS_PATH/setup_postgres.sh --haf-admin-account=haf_admin --haf-binaries-dir="$CI_PROJECT_DIR/hive_fork_manager/build" ;
+        $SETUP_SCRIPTS_PATH/setup_db.sh --haf-db-name="haf_block_log" --haf-db-owner="hive" ;
         mkdir $CI_PROJECT_DIR/tests/prepare_database/blockchain ;
         $HIVE_BUILD_ROOT_PATH/programs/util/truncate_block_log $BLOCK_LOG_PATH $CI_PROJECT_DIR/tests/prepare_database/blockchain/block_log 5000000 ;
         $HIVE_BUILD_ROOT_PATH/programs/hived/hived --data-dir $CI_PROJECT_DIR/tests/prepare_database --config config.ini --force-replay --exit-before-sync --stop-replay-at 5000000  > $CI_PROJECT_DIR/from_node.log 2>&1 ;
