--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ patterns_tests:
         $SETUP_SCRIPTS_PATH/setup_db.sh --haf-db-name="haf_block_log" --haf-db-owner="hive" ;
         mkdir $CI_PROJECT_DIR/tests/prepare_database/blockchain ;
         $HIVE_BUILD_ROOT_PATH/programs/util/truncate_block_log $BLOCK_LOG_PATH $CI_PROJECT_DIR/tests/prepare_database/blockchain/block_log 5000000 ;
-        $HIVE_BUILD_ROOT_PATH/programs/hived/hived --data-dir $CI_PROJECT_DIR/tests/prepare_database --config config.ini --force-replay --exit-before-sync --stop-replay-at 5000000  > $CI_PROJECT_DIR/from_node.log 2>&1 ;
+        $HIVE_BUILD_ROOT_PATH/programs/hived/hived --data-dir $CI_PROJECT_DIR/tests/prepare_database --config config.ini --force-replay --exit-before-sync --stop-replay-at 5000000 > $CI_PROJECT_DIR/from_node.log 2>&1 ;
         export POSTGRESQL_URI='postgresql:///haf_block_log' ;
       fi
 
@@ -72,9 +72,17 @@ patterns_tests:
         export AH_ENDPOINT=localhost:6543 ;
       fi
 
-    # run tests
+    # run pattern tests
     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests
     - ./run_tests.sh $AH_ENDPOINT `git rev-parse --show-toplevel`
+
+    # run comparsion tests
+    - export AHRB_PORT=$(cat $CI_PROJECT_DIR/tests/prepare_database/config.ini | grep webserver-http-endpoint | cut -d ':' -f 2)
+    - cd $CI_PROJECT_DIR/haf/hive/tests/tests_api/hived
+    - ./test_ah_enum_virtual_ops.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4900050 -d workdir_enum
+    - ./test_ah_get_ops_in_block.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT --start 4900000 --stop 4900050 -d workdir_ops
+    - ./test_ah_get_account_history.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT -f ./input_data/accounts.csv -d workdir_acc
+    - ./test_ah_get_transaction.py --ref http://localhost:$AHRB_PORT --test http://$AH_ENDPOINT -f ./input_data/hashes.csv -d workdir_trx
 
   artifacts:
     reports:
@@ -84,6 +92,8 @@ patterns_tests:
     - "**/from_node.log"
     - "**/ah.log"
     - "**/*.out.json"
+    - "**/config.ini"
+    - "$CI_PROJECT_DIR/haf/hive/tests/tests_api/hived/workdir_*"
     when: always
     expire_in: 6 hours
   tags:
