--- a/tests/performance/proj.jmx.in
+++ b/tests/performance/proj.jmx.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jmeterTestPlan version="1.2" properties="5.0" jmeter="5.3">
+<jmeterTestPlan version="1.2" properties="5.0" jmeter="5.4.3">
   <hashTree>
     <TestPlan guiclass="TestPlanGui" testclass="TestPlan" testname="account_history" enabled="true">
       <stringProp name="TestPlan.comments"></stringProp>
@@ -688,11 +688,6 @@ SELECT COUNT(*) FROM ${PSQL_SCHEMA}.get_ops_in_block( 1092,  true, true )
             <stringProp name="Argument.metadata">=</stringProp>
             <stringProp name="Argument.desc">port to test</stringProp>
           </elementProp>
-          <elementProp name="HTTP_PATH" elementType="Argument">
-            <stringProp name="Argument.name">HTTP_PATH</stringProp>
-            <stringProp name="Argument.value">ENTER HTTP PATH HERE</stringProp>
-            <stringProp name="Argument.metadata">=</stringProp>
-          </elementProp>
           <elementProp name="PATH_TO_DATASET" elementType="Argument">
             <stringProp name="Argument.name">PATH_TO_DATASET</stringProp>
             <stringProp name="Argument.value">ENTER PATH TO CSV HERE</stringProp>
@@ -758,7 +753,7 @@ SELECT COUNT(*) FROM ${PSQL_SCHEMA}.get_ops_in_block( 1092,  true, true )
         <stringProp name="HTTPSampler.port">${PORT}</stringProp>
         <stringProp name="HTTPSampler.protocol">http</stringProp>
         <stringProp name="HTTPSampler.contentEncoding">utf-8</stringProp>
-        <stringProp name="HTTPSampler.path">${HTTP_PATH}</stringProp>
+        <stringProp name="HTTPSampler.path"></stringProp>
         <stringProp name="HTTPSampler.concurrentPool">6</stringProp>
         <stringProp name="HTTPSampler.connect_timeout"></stringProp>
         <stringProp name="HTTPSampler.response_timeout"></stringProp>
